--- a/app/baseanalyze/templates/baseanalyze/analyze.html
+++ b/app/baseanalyze/templates/baseanalyze/analyze.html
@@ -1,4 +1,7 @@
 {% block content %}
+<head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-w76AqEQfQP1+Zy4hXvQ6UHd+4tvb1zE2jz1gZ9gLGFZ+5xkS8W49z6jRa6MiJQm9" crossorigin="anonymous">
+</head>
 <div class="container mt-4">
     <h2>Базовый анализ файла: {{ file.file.name }}</h2>
     
@@ -42,9 +45,132 @@
             </table>
         </div>
     </div>
+
+    <div class="card mt-4">
+        <div class="card-header">
+            <h4 class="mb-2">
+                <a class="btn btn-sm btn-outline-primary" data-bs-toggle="collapse" href="#stringsCollapse" role="button" aria-expanded="false" aria-controls="stringsCollapse">
+                    Строки в файле ({{ strings|length }})
+                </a>
+            </h4>
+            <input type="text" class="form-control form-control-sm" id="stringSearchInput" placeholder="Поиск по строкам..." onkeyup="filterStrings()">
+        </div>
+
+        <div id="stringsCollapse" class="collapse show">
+            <div class="card-body" style="max-height: 300px; overflow-y: auto; border: 1px solid #ddd; border-radius: 4px;">
+                <ul class="list-group list-group-flush" id="stringsList">
+                    {% for s in strings %}
+                    <li class="list-group-item py-1 px-2">{{ s }}</li>
+                    {% empty %}
+                    <li class="list-group-item">Нет строк</li>
+                    {% endfor %}
+                </ul>
+            </div>
+        </div>
+    </div>
+
+    <!-- EP -->
+    <div class="card mt-4">
+        <div class="card-header">
+            <h4 class="mb-2">
+                EntryPoint — ({{ pe_info.entry_point|default:"<без имени>" }})
+            </h4>
+        </div>
+    </div>
+
+    <!-- IAT -->
+    <div class="card mt-4">
+    <div class="card-header">
+        <h5>
+        <a class="btn btn-sm btn-outline-primary" data-bs-toggle="collapse" href="#iatCollapse" role="button" aria-expanded="false" aria-controls="iatCollapse">
+            Импортируемые функции (IAT) — {{ pe_info.imports|length }}
+        </a>
+        </h5>
+    </div>
+    <div id="iatCollapse" class="collapse">
+        <div class="card-body" style="max-height: 250px; overflow-y: auto;">
+        <ul class="list-group list-group-flush small">
+            {% for i in pe_info.imports %}
+            <li class="list-group-item">
+            <strong>{{ i.dll }}</strong>: {{ i.name }} ({{ i.address }})
+            </li>
+            {% empty %}
+            <li class="list-group-item">Нет импортов</li>
+            {% endfor %}
+        </ul>
+        </div>
+    </div>
+    </div>
+
+    <!-- EAT -->
+    <div class="card mt-4">
+    <div class="card-header">
+        <h5>
+        <a class="btn btn-sm btn-outline-success" data-bs-toggle="collapse" href="#eatCollapse" role="button" aria-expanded="false" aria-controls="eatCollapse">
+            Экспортируемые функции (EAT) — {{ pe_info.exports|length }}
+        </a>
+        </h5>
+    </div>
+    <div id="eatCollapse" class="collapse">
+        <div class="card-body" style="max-height: 250px; overflow-y: auto;">
+        <ul class="list-group list-group-flush small">
+            {% for e in pe_info.exports %}
+            <li class="list-group-item">
+            {{ e.name|default:"<без имени>" }} ({{ e.address }})
+            </li>
+            {% empty %}
+            <li class="list-group-item">Нет экспортов</li>
+            {% endfor %}
+        </ul>
+        </div>
+    </div>
+    </div>
+
+    <!-- PE SECTIONS -->
+    <div class="card mt-4">
+    <div class="card-header">
+        <h5>
+        <a class="btn btn-sm btn-outline-success" data-bs-toggle="collapse" href="#secCollapse" role="button" aria-expanded="false" aria-controls="secCollapse">
+            Секции PE — {{ pe_info.sections|length }}
+        </a>
+        </h5>
+    </div>
+    <div id="secCollapse" class="collapse">
+        <div class="card-body" style="max-height: 250px; overflow-y: auto;">
+        <ul class="list-group list-group-flush small">
+            {% for e in pe_info.sections %}
+            <li class="list-group-item">
+            {{ e.name|default:"<без имени>" }} (VAddr: {{ e.virtual_address }}); (VSize:{{ e.virtual_size }}); (RawSize: {{ e.raw_size }})
+            </li>
+            {% empty %}
+            <li class="list-group-item">Нет секций</li>
+            {% endfor %}
+        </ul>
+        </div>
+    </div>
+    </div>
+
+
+
+
     
     <div class="mt-4">
-        <a href="{% url 'dashboard' %}" class="btn btn-secondary">Назад</a>
+        <a href="{% url 'dashboard:dashboard' %}" class="btn btn-secondary">Назад</a>
     </div>
 </div>
+
+<script>
+    function filterStrings() {
+        const input = document.getElementById("stringSearchInput");
+        const filter = input.value.toLowerCase();
+        const ul = document.getElementById("stringsList");
+        const items = ul.getElementsByTagName("li");
+
+        for (let i = 0; i < items.length; i++) {
+            const txt = items[i].textContent || items[i].innerText;
+            items[i].style.display = txt.toLowerCase().includes(filter) ? "" : "none";
+        }
+    }
+</script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JwA9SKFxXgkEqlsFtjPaOOkKkFjO6mdshHPn/k+Iu3EoPLZVxybcTYQ20v6ooQDb" crossorigin="anonymous"></script>
 {% endblock %}
